Added sqlcipher for a database with protections

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,12 @@ project(SystemManager)
 
 set(CMAKE_CXX_STANDARD 23)
 
-add_executable(SystemManager src/main.cpp)
+add_executable(SystemManager src/main.cpp
+        src/bd/Connector.cpp
+        src/bd/Connector.h)
+
+find_package(SQLite3 REQUIRED)
+
+target_link_libraries(${PROJECT_NAME}
+        SQLite::SQLite3
+)
