--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,7 @@ set(CMAKE_CXX_STANDARD 23)
 
 add_executable(SystemManager src/main.cpp
         src/model/Service.cpp
-        src/model/Service.h)
+        src/model/Service.h
+        src/model/Identifiant.cpp
+        src/model/Identifiant.h
+)
