Added tokens for services

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,4 +8,8 @@ add_executable(SystemManager src/main.cpp
         src/model/Service.h
         src/model/Identifiant.cpp
         src/model/Identifiant.h
+        src/model/TokenGroup.cpp
+        src/model/TokenGroup.h
+        src/model/Token.cpp
+        src/model/Token.h
 )
