--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,13 +3,9 @@ project(SystemManager)
 
 set(CMAKE_CXX_STANDARD 23)
 
-add_executable(SystemManager src/main.cpp
-        src/model/Service.cpp
-        src/model/Service.h
-        src/model/Identifiant.cpp
-        src/model/Identifiant.h
-        src/model/TokenGroup.cpp
-        src/model/TokenGroup.h
-        src/model/Token.cpp
-        src/model/Token.h
-)
+add_subdirectory(src/model)
+add_subdirectory(tests)
+
+add_subdirectory(libs/Catch2)
+
+add_executable(SystemManager src/main.cpp)
