--- a/src/model/CMakeLists.txt
+++ b/src/model/CMakeLists.txt
@@ -17,3 +17,5 @@ add_library(model STATIC
 find_package(OpenSSL REQUIRED)
 
 target_include_directories(model PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+
+target_link_libraries(model PRIVATE OpenSSL::Crypto sqlcipher)
