--- a/src/bd/CMakeLists.txt
+++ b/src/bd/CMakeLists.txt
@@ -8,9 +8,9 @@ add_library(bd STATIC
         Connector.cpp
         IGenericDao.h
         IIdentifiantDao.h
-        IServiceDAO.h
+        IServiceDao.h
         ITokenDao.h
-        ITokenGroupDAO.h)
+        ITokenGroupDao.h)
 
 find_package(PkgConfig REQUIRED)
 pkg_check_modules(SQLCIPHER REQUIRED sqlcipher)
